# cad-viewer

./: README
make/: CMakeLists.txt
res/: cad-viewer.qrc
src/: main.cpp
src/gui/: actionlist.cpp  actionlist.h  cadviewerapplication.cpp  cadviewerapplication.h  childwindow.cpp  childwindow.h  inventorviewer.cpp  inventorviewer.h  mainwindow.cpp  mainwindow.h  mainwindow_ui.cpp  model.cpp  model.h  version.cpp  version.h  view.cpp  view.h
src/gui/viewer/: opencascadeviewer.cpp  opencascadeviewer.h  viewer.cpp  viewer.h
src/gui/viewer/inventor/: inventorshape.cpp  inventorshape.h  inventorviewer.cpp  inventorviewer.h  soaxes.cpp  soaxes.h  sobackgroundgradient.cpp  sobackgroundgradient.h
src/gui/viewer/occ/: occconfig.h  opencascadeviewer.cpp  opencascadeviewer.h
src/model/: shape.h
src/modeling/: fileloader.cpp  fileloader.h  shape.cpp  shape.h
src/util/: exception.h  messagestring.h  sbscopedptr.h  soscopedptr.h
